# Ballbot_gazebo

./: LICENSE  README.md
ballbot/: model.config  model.sdf
ballbot_plugin/: CMakeLists.txt  package.xml
ballbot_plugin/launch/: hello.launch  load_controller.launch
ballbot_plugin/src/: apply_joint_effort_client.cpp  friction_modifier.cpp  imu_transformer.cpp  simple_world_plugin.cpp  velo_transformer.cpp
ballbot_plugin/worlds/: test.world  test_friction.world
